--- a/monorepo/javascript/style.css
+++ b/monorepo/javascript/style.css
@@ -1,3 +1,15 @@
 .display-hidden{
     display: none;
 }
+
+#checkbox-inputs {
+    display: flex;
+}
+
+#checkbox-inputs label {
+    display: flex;
+}
+
+label[for='internship'] {
+    order: attr(data-order);
+}
